Module 4 (Change properties and pom.xml)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=sA9QOnJTLbqc1WhBFd5_KqRe7tD4F-Hu
 #spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bookstore_bh
 #spring.datasource.username=postgres
 #spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
